OpenShift/deploy-service.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: p2f-portal
  labels:
    app: p2f-portal
    app.kubernetes.io/component: p2f-portal
    app.kubernetes.io/instance: p2f-portal
    app.kubernetes.io/name: p2f-portal
    app.kubernetes.io/part-of: p2f-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2f-portal
      app.kubernetes.io/name: p2f-portal
  template:
    metadata:
      labels:
        app: p2f-portal
        deployment: p2f-portal
        app.kubernetes.io/name: p2f-portal
    spec:
      containers:
        - name: p2f-portal
          image: 'ghcr.io/past-to-future-eu-horizon/p2f_portal:latest'
          ports:
            - containerPort: 8082
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
---
apiVersion: v1
kind: Service
metadata:
  name: p2f-portal
spec:
  selector:
    app: p2f-portal
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8082
