OpenShift/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2f-portal
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: harica
    ingress.citrix.com/insecure-termination: redirect
spec:
  ingressClassName: nsic-vpx
  rules:
  - host: {hostname}
    http:
      paths:
      - backend:
          service:
            name: p2f-portal
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - {hostname}
    secretName: p2f-portal-tls
